@startuml

title __COMPONENTS's Class Diagram__\n

  namespace  {
    namespace om.pos {
      namespace components {
        class com.pos.components.FormData {
            ~ input : TextField
            + FormData()
            + FormData()
            + clear()
            + getText()
            + setText()
        }
      }
    }
  }
  

  namespace  {
    namespace om.pos {
      namespace components {
        class com.pos.components.IProduct {
            ~ cant : Label
            ~ deleteBtn : Button
            ~ nombre : Label
            ~ total : Label
            + IProduct()
        }
      }
    }
  }
  

  namespace  {
    namespace om.pos {
      namespace components {
        class com.pos.components.PanelGrid {
            ~ panelGrid : GridPane
            + PanelGrid()
        }
      }
    }
  }
  

  namespace  {
    namespace om.pos {
      namespace components {
        class com.pos.components.ProductCard {
            ~ bottomPanel : VBox
            ~ btn : Button
            ~ imagen : Pane
            ~ nameLabel : Label
            ~ spinner : Spinner<Integer>
            ~ status : boolean
            ~ stock : Label
            ~ total : Label
            + ProductCard()
            + getBottomPanel()
            + getBtn()
            + getImagen()
            + getNameLabel()
            + getProduct()
            + getSpinner()
            + getStatus()
            + getStock()
            + getTotal()
            + setAllComponents()
            + setBottomPanel()
            + setBtn()
            + setImagen()
            + setNameLabel()
            + setSpinner()
            + setStatus()
            + setStock()
            + setTotal()
        }
      }
    }
  }
  

  namespace  {
    namespace om.pos {
      namespace components {
        class com.pos.components.ProductsContainer {
            + ProductsContainer()
            + addProduct()
            + getIProductList()
        }
      }
    }
  }
  

  namespace  {
    namespace om.pos {
      namespace components {
        class com.pos.components.ProductsPanel {
            - allProducts : List<ProductoEntity>
            - products : ObservableList<ProductoEntity>
            - selectedIndex : int
            - stage : Stage
            + start()
            - clearAll()
            - closeWindowEvent()
        }
      }
    }
  }
  

  namespace  {
    namespace om.pos {
      namespace components {
        class com.pos.components.SalePanel {
            + SalePanel()
        }
      }
    }
  }
  

  com.pos.components.FormData -up-|> javafx.scene.layout.VBox
  com.pos.components.IProduct -up-|> javafx.scene.layout.HBox
  com.pos.components.IProduct o-- com.pos.components.ProductCard : productCard
  com.pos.components.PanelGrid -up-|> javafx.scene.control.ScrollPane
  com.pos.components.ProductCard -up-|> javafx.scene.layout.VBox
  com.pos.components.ProductCard o-- com.pos.models.ProductoEntity : producto
  com.pos.components.ProductsContainer -up-|> javafx.scene.control.ListView
  com.pos.components.ProductsPanel -up-|> javafx.application.Application
  com.pos.components.ProductsPanel o-- com.pos.controllers.Productos : controller
  com.pos.components.ProductsPanel o-- com.pos.components.FormData : idTxt
  com.pos.components.ProductsPanel o-- com.pos.components.FormData : nameTxt
  com.pos.components.ProductsPanel o-- com.pos.components.FormData : precioTxt
  com.pos.components.ProductsPanel o-- com.pos.components.FormData : stockTxt
  com.pos.components.ProductsPanel o-- com.pos.components.FormData : typeTxt
  com.pos.components.SalePanel -up-|> javafx.scene.layout.GridPane


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
